fix navbar overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ input {
 
 .hide {
     right: -144px !important;
+    display: none !important;
 }
 
 a.active {
